fix code style that didn't wrap properly

--- a/src/css/code.css
+++ b/src/css/code.css
@@ -7,10 +7,10 @@ code {
   background: var(--lighter-grey);
   border-radius: var(--theme-border-radius);
   padding: 0.5em;
-  font-size: 0.8em;
   font-family: 'Courier New';
   word-break: break-word;
-  white-space: pre;
+  white-space: pre-wrap;
+  vertical-align: middle;
   display: inline-block;
   max-width: 100%;
   overflow-x: auto;
